k8s-manifests/base/namespace-staging.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-staging
  labels:
    name: ecommerce-staging
    istio-injection: enabled
    environment: staging
