k8s-manifests/base/contact-support.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contact-support-team
  labels:
    app: contact-support-team
spec:
  replicas: 2
  selector:
    matchLabels:
      app: contact-support-team
  template:
    metadata:
      labels:
        app: contact-support-team
        version: v1
    spec:
      containers:
      - name: contact-support
        image: rslim087/contact-support-team:1.0.0
        ports:
        - containerPort: 8000
          name: http
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: contact-support-team
  labels:
    app: contact-support-team
spec:
  ports:
  - port: 8000
    targetPort: 8000
    name: http
  selector:
    app: contact-support-team
