k8s-manifests/base/ecommerce-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-ui
  labels:
    app: ecommerce-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecommerce-ui
  template:
    metadata:
      labels:
        app: ecommerce-ui
        version: v1
    spec:
      containers:
      - name: ecommerce-ui
        image: 794038226274.dkr.ecr.us-east-1.amazonaws.com/ecommerce/ecommerce-ui:v2.0
        ports:
        - containerPort: 4000
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-ui
  labels:
    app: ecommerce-ui
spec:
  ports:
  - port: 4000
    targetPort: 4000
    name: http
  selector:
    app: ecommerce-ui
