k8s-manifests/base/order-management.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-management
  labels:
    app: order-management
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-management
  template:
    metadata:
      labels:
        app: order-management
        version: v1
    spec:
      containers:
      - name: order-management
        image: rslim087/order-management:1.0.0
        ports:
        - containerPort: 9090
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: order-management
  labels:
    app: order-management
spec:
  ports:
  - port: 9090
    targetPort: 9090
    name: http
  selector:
    app: order-management
